--- a/src/main/resources/templates/adddisk.html
+++ b/src/main/resources/templates/adddisk.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Articles</title>
+    <title>Add a vinyl</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
@@ -24,18 +24,22 @@
     </div>
 </nav>
 
-<a class="nav-link active" href="form">Добавить новую статью</a>
-
-<main class="flex-shrink-0 mt-5">
-    <div class="container">
-        <h1 class="mt-5">Список статей</h1>
-        <div th:each="el: ${articles}" class="alert alert-info mt-2">
-            <h2 th:text="${el.name}"/>
-            <h3 th:text="${el.description}"/>
-            <h4 th:text="${el.text}"/>
-        </div>
-    </div>
-</main>
+<div class="container mt-5 mb-2" style="min-height: 70vh">
+    <h2>Добавленине Пластинки</h2>
+    <form action="addisk" method="post">
+        <input type="text" required
+               name="name" placeholder="Введите название"
+               class="form-control" autocomplete="off"><br>
+        <textarea name="cost" required placeholder="Введите цену"
+                  class="form-control"></textarea><br>
+        <textarea name="year" required placeholder="Введите год выпуска"
+                  class="form-control"></textarea><br>
+        <textarea name="lable" required placeholder="Введите лейбл"
+                  class="form-control"></textarea><br>
+        <textarea name="description" required placeholder="Введите описание"
+                  class="form-control"></textarea><br>
+        <button type="submit" class="btn btn-success"><a href="disk">Добавить пластинку</a></button>
+    </form>
 
 </body>
 </html>
