Added user form, modified navbar

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -17,14 +17,18 @@
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="main">Главная</a>
                 <a class="nav-link active" href="disk">Пластинки</a>
+                <a class="nav-link active" href="adddisk">Добавить новую пластинку</a>
                 <a class="nav-link active" href="article">Статьи</a>
+                <a class="nav-link active" href="form">Добавить новую статью</a>
                 <a class="nav-link active" href="about">О нас</a>
+                <a class="nav-link active" href="user">Заказать</a>
+
             </div>
         </div>
     </div>
 </nav>
 
-<a class="nav-link active" href="form">Добавить новую статью</a>
+
 
 <main class="flex-shrink-0 mt-5">
     <div class="container">
