--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,8 +17,11 @@
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="main">Главная</a>
                 <a class="nav-link active" href="disk">Пластинки</a>
+                <a class="nav-link active" href="adddisk">Добавить новую пластинку</a>
                 <a class="nav-link active" href="article">Статьи</a>
+                <a class="nav-link active" href="form">Добавить новую статью</a>
                 <a class="nav-link active" href="about">О нас</a>
+                <a class="nav-link active" href="user">Заказать</a>
             </div>
         </div>
     </div>
