--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>About</title>
+    <title>User</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
@@ -26,14 +26,18 @@
         </div>
     </div>
 </nav>
-<main class="flex-shrink-0 mt-5">
-    <div class="container">
-        <h1 class="mt-5">Информация о нашем магазине</h1>
-        <p class="lead">Мы - частная компания, которая занимается поиском и продажей самых редких пластинок, которые только можно найти на просторах Интернета.</p>
-        <p>О нас есть множество положительных отзывов.</p>
-        <img src="https://media.istockphoto.com/photos/winner-picture-id485235442?k=20&m=485235442&s=612x612&w=0&h=DNDpSTJpPzPHQXMkjLBJguCnW0_VGJutWjvNDRauKyA=">
-        <p>В настоящий момент мы осуществляем доставку во все регионы России.</p>
-    </div>
-</main>
+<div class="container mt-5 mb-2" style="min-height: 70vh">
+    <h2>Добавленине статьи</h2>
+    <form action="form" method="post">
+        <input type="text" required
+               name="name" placeholder="Введите название"
+               class="form-control" autocomplete="off"><br>
+        <textarea name="description" required placeholder="Введите опиcание"
+                  class="form-control"></textarea><br>
+        <textarea name="text" required placeholder="Введите текст"
+                  class="form-control"></textarea><br>
+        <button type="submit" class="btn btn-success"><a href="main">Добавить статью</a></button>
+    </form>
+</div>
 </body>
 </html>
