Added list of users

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -22,6 +22,7 @@
                 <a class="nav-link active" href="form">Добавить новую статью</a>
                 <a class="nav-link active" href="about">О нас</a>
                 <a class="nav-link active" href="user">Заказать</a>
+                <a class="nav-link active" href="userlist">Список заказавших</a>
 
             </div>
         </div>
