--- a/src/main/resources/templates/userlist.html
+++ b/src/main/resources/templates/userlist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Add a vinyl</title>
+    <title>List of users</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
@@ -28,22 +28,19 @@
     </div>
 </nav>
 
-<div class="container mt-5 mb-2" style="min-height: 70vh">
-    <h2>Добавленине Пластинки</h2>
-    <form action="addisk" method="post">
-        <input type="text" required
-               name="name" placeholder="Введите название"
-               class="form-control" autocomplete="off"><br>
-        <textarea name="cost" required placeholder="Введите цену"
-                  class="form-control"></textarea><br>
-        <textarea name="year" required placeholder="Введите год выпуска"
-                  class="form-control"></textarea><br>
-        <textarea name="lable" required placeholder="Введите лейбл"
-                  class="form-control"></textarea><br>
-        <textarea name="description" required placeholder="Введите описание"
-                  class="form-control"></textarea><br>
-        <button type="submit" class="btn btn-success">Добавить пластинку</button>
-    </form>
+<main class="flex-shrink-0 mt-5">
+    <div class="container">
+        <h1 class="mt-5">Список пользователей</h1>
+        <div th:each="el: ${users}" class="alert alert-info mt-2">
+            <h2 th:text="${el.name}"/>
+            <h2 th:text="${el.surname}"/>
+            <h3 th:text="${el.number}"/>
+            <h3 th:text="${el.plate}"/>
+        </div>
+    </div>
+</main>
+
+
 
 </body>
 </html>
