user.html edited

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -28,7 +28,7 @@
     </div>
 </nav>
 <div class="container mt-5 mb-2" style="min-height: 70vh">
-    <h2>Добавленине статьи</h2>
+    <h2>Заказ</h2>
     <form action="user" method="post">
         <input type="text" required
                name="name" placeholder="Введите имя"
